--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ new Vue({
 
   data() {
     return {
-      // url: '', // 在线链接
+      url: '', // 在线链接
       // url: 'https://vod1.bdzybf7.com/20220911/ArIAdgxk/1700kb/hls/index.m3u8', // 在线链接
-      url: 'http://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8', // 在线链接
+      // url: 'https://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8', // 在线链接
       tips: 'm3u8 视频在线提取工具', // 顶部提示
       title: '', // 视频标题
       isPause: false, // 是否暂停下载
