--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
     <div v-else-if="finishNum === rangeDownload.targetSegment && rangeDownload.targetSegment > 0" class="disable">下载完成</div>
     <div v-else @click="togglePause">{{ isPause ? '恢复下载' : '暂停下载' }}</div>
   </section>
-  <div v-if="!downloading" class="m-p-stream" @click="streamDownload">特大视频原格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div>
-  <!-- <div v-if="!downloading" class="m-p-stream" @click="streamDownload(true)">特大视频 MP4 格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div> -->
+  <div v-if="!downloading && isSupperStreamWrite" class="m-p-stream" @click="streamDownload(false)">特大视频原格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div>
+  <div v-if="!downloading && isSupperStreamWrite" class="m-p-stream" @click="streamDownload(true)">特大视频 MP4 格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div>
 
   <div class="m-p-cross" @click="copyCode">当无法下载，资源发生跨域限制时，在视频源页面打开控制台，注入代码解决，点击本按钮复制代码</div>
   <a class="m-p-final" target="_blank" href="https://segmentfault.com/a/1190000025182822">下载的视频看不了？试试这个终结解决方案「无差别视频提取工具」，有配套「油猴」插件啦！！！</a>
@@ -425,11 +425,10 @@ var _hmt = _hmt || [];
 <script src="https://upyun.luckly-mjw.cn/lib/vue.js"></script>
 <script src="https://upyun.luckly-mjw.cn/lib/aes-decryptor.js"></script>
 <script src="https://upyun.luckly-mjw.cn/lib/mux-mp4.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.3/StreamSaver.min.js"></script> -->
-<script src="./StreamSaver.js"></script>
+<script src="https://upyun.luckly-mjw.cn/lib/stream-saver.js"></script>
 
 <script>
-  
+
 // script注入
 document.getElementById('loading') && document.getElementById('loading').remove()
 new Vue({
@@ -438,9 +437,7 @@ new Vue({
   data() {
     return {
       url: '', // 在线链接
-      // url: 'https://vod1.bdzybf7.com/20220911/ArIAdgxk/1700kb/hls/index.m3u8', // 在线链接
-      // url: 'https://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8', // 在线链接
-      tips: 'm3u8 视频在线提取工具', // 顶部提示
+      tips: 'm3u8 视频在线提取工具', // 顶部提示 
       title: '', // 视频标题
       isPause: false, // 是否暂停下载
       isGetMP4: false, // 是否转码为 MP4 下载
@@ -454,6 +451,7 @@ new Vue({
       finishList: [], // 下载完成项目
       tsUrlList: [], // ts URL数组
       mediaFileList: [], // 下载的媒体数组
+      isSupperStreamWrite: !streamSaver.useBlobFallback, // 当前浏览器是否支持流式下载
       streamWriter: null, // 文件流写入器
       streamDownloadIndex: 0, // 文件流写入器，正准备写入第几个视频片段
       rangeDownload: { // 特定范围下载
@@ -938,11 +936,16 @@ new Vue({
           let $vue = document.createElement('script')
           $vue.src = 'https://upyun.luckly-mjw.cn/lib/vue.js'
 
+          // 加载 stream save
+          let $streamSaver = document.createElement('script')
+          $vue.src = 'https://upyun.luckly-mjw.cn/lib/stream-saver.js'
+
           // 监听 vue 加载完成，执行业务代码
           $vue.addEventListener('load', () => {${script}})
           document.body.appendChild($vue);
           document.body.appendChild($mp4);
           document.body.appendChild($ase);
+          document.body.appendChild($streamSaver);
           alert('注入成功，请滚动到页面底部，若白屏则等待资源加载')
           `;
             this.copyToClipboard(codeStr);
