--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
   <!--顶部操作提示-->
   <section class="m-p-action g-box">{{tips}}</section>
   <a class="m-p-help" target="_blank" href="https://segmentfault.com/a/1190000021847172">?</a>
-  <a class="m-p-tamper" target="_blank" href="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/m3u8-downloader.user.js">手动添加油猴插件</a>
+  <a class="m-p-tamper" target="_blank" href="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/m3u8-downloader.user.js">手动添加/更新油猴插件</a>
   <a class="m-p-github" target="_blank" href="https://github.com/Momo707577045/m3u8-downloader">github</a>
   <a class="m-p-other" target="_blank" href="http://blog.luckly-mjw.cn/tool-show/index.html">其他实用工具</a>
   <a class="m-p-language" href="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/index-en.html">English version</a>
@@ -451,7 +451,7 @@ new Vue({
       finishList: [], // 下载完成项目
       tsUrlList: [], // ts URL数组
       mediaFileList: [], // 下载的媒体数组
-      isSupperStreamWrite: !streamSaver.useBlobFallback, // 当前浏览器是否支持流式下载
+      isSupperStreamWrite: window.streamSaver && !window.streamSaver.useBlobFallback, // 当前浏览器是否支持流式下载
       streamWriter: null, // 文件流写入器
       streamDownloadIndex: 0, // 文件流写入器，正准备写入第几个视频片段
       rangeDownload: { // 特定范围下载
@@ -560,7 +560,7 @@ new Vue({
       if(document.title !== 'm3u8 downloader'){
         fileName = window.top.document.title
       }
-      this.streamWriter = streamSaver.createWriteStream(`${fileName}.${isMp4 ? 'mp4' : 'ts'}`).getWriter()
+      this.streamWriter = window.streamSaver.createWriteStream(`${fileName}.${isMp4 ? 'mp4' : 'ts'}`).getWriter()
       this.getM3U8()
     },
 
@@ -936,16 +936,16 @@ new Vue({
           let $vue = document.createElement('script')
           $vue.src = 'https://upyun.luckly-mjw.cn/lib/vue.js'
 
-          // 加载 stream save
+          // 加载 stream 流式下载器
           let $streamSaver = document.createElement('script')
-          $vue.src = 'https://upyun.luckly-mjw.cn/lib/stream-saver.js'
+          $streamSaver.src = 'https://upyun.luckly-mjw.cn/lib/stream-saver.js'
 
           // 监听 vue 加载完成，执行业务代码
           $vue.addEventListener('load', () => {${script}})
-          document.body.appendChild($vue);
           document.body.appendChild($mp4);
           document.body.appendChild($ase);
           document.body.appendChild($streamSaver);
+          document.body.appendChild($vue);
           alert('注入成功，请滚动到页面底部，若白屏则等待资源加载')
           `;
             this.copyToClipboard(codeStr);
