--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   </section>
   <div v-if="!downloading && isSupperStreamWrite" class="m-p-stream" @click="streamDownload(false)">特大视频原格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div>
   <div v-if="!downloading && isSupperStreamWrite" class="m-p-stream" @click="streamDownload(true)">特大视频 MP4 格式下载，边下载边保存，彻底解决大文件下载内存不足问题 </div>
-  <a v-if="!downloading" class="m-p-report" target="_blank" href="https://segmentfault.com/a/1190000021847172">运行出现问题，点击此按钮留言，作者将第一时间跟进回复，共同维护本项目</a>
+  <a v-if="!downloading" class="m-p-report" target="_blank" href="https://segmentfault.com/a/1190000021847172">运行出现问题，可点击此按钮留言反馈，作者将第一时间跟进，共同维护本项目</a>
 
   <div class="m-p-cross" @click="copyCode">当无法下载，资源发生跨域限制时，在视频源页面打开控制台，注入代码解决，点击本按钮复制代码</div>
   <a class="m-p-final" target="_blank" href="https://segmentfault.com/a/1190000025182822">下载的视频看不了？试试这个终结解决方案「无差别视频提取工具」，有配套「油猴」插件啦！！！</a>
@@ -509,6 +509,18 @@ new Vue({
       }
     },
 
+
+    // 获取顶部 window title，因可能存在跨域问题，故使用 try catch 进行保护
+    getDocumentTitle(){
+      let title = document.title;
+      try {
+        title = window.top.document.title
+      } catch (error) {
+        console.log(error)
+      }
+      return title
+    },
+
     // 退出弹窗
     onKeyup(event) {
       if (event.keyCode === 13) { // 键入ESC
@@ -563,7 +575,7 @@ new Vue({
       this.isGetMP4 = isMp4
       let fileName = this.title || this.formatTime(new Date(), 'YYYY_MM_DD hh_mm_ss')
       if(document.title !== 'm3u8 downloader'){
-        fileName = window.top.document.title
+        fileName = this.getDocumentTitle()
       }
       this.streamWriter = window.streamSaver.createWriteStream(`${fileName}.${isMp4 ? 'mp4' : 'ts'}`).getWriter()
       this.getM3U8()
@@ -764,7 +776,7 @@ new Vue({
         } else if (this.finishNum === this.rangeDownload.targetSegment) {
           let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
           if(document.title !== 'm3u8 downloader'){
-            fileName = window.top.document.title
+            fileName = this.getDocumentTitle()
           }
           this.downloadFile(this.mediaFileList, fileName)
         }
@@ -884,7 +896,7 @@ new Vue({
       if (this.mediaFileList.length) {
         let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
         if(document.title !== 'm3u8 downloader'){
-          fileName = window.top.document.title
+          fileName = this.getDocumentTitle()
         }
         this.downloadFile(this.mediaFileList, fileName)
       } else {
