避免 id 重名，将 loading 更名为 m-loading

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 </head>
 
 <body>
-<div id="loading">
+<div id="m-loading">
   页面加载中，请耐心等待...
   <h1 style="white-space: pre;">
     推荐一个 m3u8 网页版提取工具，无需下载软件，打开网站即可下载，自动检测，一键下载。
@@ -435,7 +435,7 @@ var _hmt = _hmt || [];
 <script>
 
 // script注入
-document.getElementById('loading') && document.getElementById('loading').remove()
+document.getElementById('m-loading') && document.getElementById('m-loading').remove()
 new Vue({
   el: '#m-app',
 
