--- a/index-en.html
+++ b/index-en.html
@@ -358,7 +358,7 @@
   </a>
 
   <!--文件载入-->
-  <div class="m-p-temp-url">test url：http://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8</div>
+  <div class="m-p-temp-url">test url：https://upyun.luckly-mjw.cn/Assets/media-source/example/media/index.m3u8</div>
   <section class="m-p-input-container">
     <input type="text" v-model="url" :disabled="downloading" placeholder="Please input m3u8 url">
 
