--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <a v-if="!downloading" class="m-p-report" target="_blank" href="https://segmentfault.com/a/1190000021847172">运行出现问题，可点击此按钮留言反馈，作者将第一时间跟进，共同维护本项目</a>
 
     <div class="m-p-cross" @click="copyCode">当无法下载，资源发生跨域限制时，在视频源页面打开控制台，注入代码解决，点击本按钮复制代码</div>
-    <a class="m-p-final" target="_blank" href="https://segmentfault.com/a/1190000025182822">下载的视频看不了？试试这个终结解决方案「无差别视频提取工具」，有配套「油猴」插件啦！！！</a>
+    <a class="m-p-final" target="_blank" href="https://github.com/Momo707577045/media-source-extract">下载的视频看不了？试试这个终结解决方案「无差别视频提取工具」，有配套「油猴」插件啦！！！</a>
 
     <template v-if="finishList.length > 0">
       <div class="m-p-line"></div>
