--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
           <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
         </svg>加入我们的社区
       </div>
+      <div style="color: #999999;font-size: 14px; font-weight: normal;text-align: center;">(群已满员，请添加 mjw707577045 加群)</div>
       <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
         <img src="https://upyun.luckly-mjw.cn/Assets/qrcode/tools.jpeg" alt="效率工具" title="logo" style="width: 500px;" />
         <img src="https://upyun.luckly-mjw.cn/Assets/qrcode/m3u8.jpeg" alt="m3u8 工具" title="logo" style="width: 500px;" />
